--- a/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/index.xhtml
+++ b/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/index.xhtml
@@ -1,16 +1,26 @@
-<?xml version="1.0" encoding="windows-1252"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:p="http://primefaces.org/ui"
+                template="/WEB-INF/templates/commonLayout.xhtml">
+
+    <ui:define name="title">
+        <h:outputText value="Resumen Historial de Repacacion Tecnicos no Sub Contratados"/>
+    </ui:define>
+
+    <ui:define name="content">
+
+        <ui:include src="List.xhtml"/>
+        <ui:include src="../common/Print.xhtml"/>
+<!--        <ui:include src="Create.xhtml"/>
+        <ui:include src="Edit.xhtml"/>
+        <ui:include src="View.xhtml"/>-->
+        <!--               <ui:include src="Edit.xhtml"/>
+                  <ui:include src="Create.xhtml"/>-->
+        <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
+
+    </ui:define>
+
+</ui:composition>
