--- a/src/main/webapp/views/TasaExitoFalloReparacion/index.xhtml
+++ b/src/main/webapp/views/TasaExitoFalloReparacion/index.xhtml
@@ -7,13 +7,19 @@
                 template="/WEB-INF/templates/commonLayout.xhtml">
 
     <ui:define name="title">
-        <h:outputText value="Tasa Exito/Fallo en Reparaciones"/>
+        <h:outputText value="Tasa Exito Fallo En Reparaciones V2"/>
     </ui:define>
 
     <ui:define name="content">
 
         <ui:include src="List.xhtml"/>
-          <ui:include src="../common/Print.xhtml"/>
+        <ui:include src="../common/Print.xhtml"/>
+<!--        <ui:include src="Create.xhtml"/>
+        <ui:include src="Edit.xhtml"/>
+        <ui:include src="View.xhtml"/>-->
+        <!--               <ui:include src="Edit.xhtml"/>
+                  <ui:include src="Create.xhtml"/>-->
+        <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
 
     </ui:define>
 
