--- a/src/main/webapp/views/ProyeccionEfectividadReparacionTiempo/List.xhtml
+++ b/src/main/webapp/views/ProyeccionEfectividadReparacionTiempo/List.xhtml
@@ -30,45 +30,47 @@
             
            
                 
-            <h:panelGrid columns="2" columnClasses="column">
+            <h:panelGrid  columnClasses="column" >
               
-              <p:column colspan="2">
-                  <h:outputLabel value="Area Hospitalaria"/>
+              <p:column>
+                  <p:outputLabel value="Area Hospitalaria" for="areaHospitalaria"/>
+              </p:column>
+                <p:column>
                   <p:selectOneMenu id="areaHospitalaria" value="#{comparativoDeTiempoVidaUtilManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
                   <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                   </p:selectOneMenu>
+                  <span>&nbsp;</span>
               </p:column>
               
-              <p:column colspan="2">
-                  <h:outputLabel value="Fecha Inicial"  />
-                  <p:selectOneMenu id="fechaInicial" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
-                  <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
-                  </p:selectOneMenu>
-              </p:column>
+         
                 <p:column>
-                     <h:outputLabel value="Fecha Final"  />
-                  <p:selectOneMenu id="fechaFinal" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
-                  <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
-                  </p:selectOneMenu>    
-                </p:column> 
+                    <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
+                </p:column>
+                <p:column>
+                    <p:calendar id="fhInicial" value="#{gastoDepreciacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
+                    <span>&nbsp;</span>
+                </p:column>
+          
+                <p:column>
+                    <p:outputLabel for="fhFin"  value="Fecha Final:" />
+                </p:column>
+                <p:column>
+                    <p:calendar id="fhFin" value="#{gastoDepreciacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
+                    <span>&nbsp;</span>
+                </p:column>
                  
                 <p:column>
-               <p:button value="Aceptar"/>
-               <p:button value="Limpiar"/>
-               <p:button value="Volver Atras"/>
+                <br/><br/>
+               <p:button value="Aceptar" icon="ui-icon-check" />
+               <p:button value="Limpiar" />
+               <p:button value="Volver Atras"  icon="ui-icon-check"/>
+               <br/><br/>   
               </p:column>
               
              
                
             </h:panelGrid>
            
-                 
-               
-                                  
-                
-                  
-                
-                
           
             
         </div>
