--- a/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/List.xhtml
+++ b/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/List.xhtml
@@ -85,21 +85,16 @@
   
 </p:dataTable>
           
-          
-   
-              
-              
-   
-</p:dataTable>
-          
-    
-                 
+           <p:dataTable var="total" value="#{total.total}">
+    <p:column headerText="Total">
+        <h:outputText value="#{car.id}" />
+    </p:column>
                
-                                  
-                
-                  
-                
-                
+               </p:dataTable>
+   
+              
+      
+          
           
             
         </div>
